--- a/content/docs/_index.adoc
+++ b/content/docs/_index.adoc
@@ -62,6 +62,11 @@ BookShowToC = false
 * link:/enlighten/docs/bigdata/hadoop-intro/[Hadoop]
 
 
+=== :blue_book: &nbsp;Concepts
+
+* link:/enlighten/docs/concepts/programming/[Programming]
+
+
 === :blue_book: &nbsp;Misc
 
 * link:/enlighten/docs/misc/git/[Git Commands]
