--- a/content/docs/_index.adoc
+++ b/content/docs/_index.adoc
@@ -48,6 +48,7 @@ BookShowToC = false
 
 === :blue_book: &nbsp;Swift
 
+* link:/enlighten/docs/swift/ios-basics/[iOS Basics]
 * link:/enlighten/docs/swift/basics/[Basics]
 * link:/enlighten/docs/swift/data-structures/[Data Structures]
 
