--- a/content/docs/_index.adoc
+++ b/content/docs/_index.adoc
@@ -39,6 +39,10 @@ BookShowToC = false
     * link:/enlighten/docs/resources/my-projects/[Projects, Apps & Sites]
     * link:/enlighten/docs/resources/setup-enlighten/[Setting up Enlighten Site]
 
+=== :blue_book: &nbsp;Database
+
+    * link:/enlighten/docs/database/firebase/[Firebase/Firestore]
+
 |
 
 === :blue_book: &nbsp;Python
